--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ title                    : "Naomi Haefner"
 title_separator          : "-"
 name                     : &name "Naomi Haefner"
 description              : &description "Personal Website"
-url                      : "naomihaefner.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "www.naomihaefner.com" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 #baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "nhaefner/nhaefner.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
